<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.danieloliveira.whatsapp.activity.LoginActivity">

    <ImageView
        android:id="@+id/logo_id"
        android:layout_width="@dimen/largura_logo"
        android:layout_height="@dimen/altura_logo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo_id"
        android:layout_marginTop="30dp"
        android:hint="@string/digite_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/digite_senha"
        android:inputType="textPassword"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/botao_logar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text"
        android:layout_marginTop="15dp"
        android:text="@string/logar"
        android:theme="@style/botaoPadrao" />

    <TextView
        android:id="@+id/cadastrar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botao_logar"
        android:layout_centerHorizontal="true"
        android:onClick="abrirCadastroUsuario"
        android:text="@string/texto_cadastrar"
        android:textColor="@color/textColorPrimary" />

</RelativeLayout>
